--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "loopback-datasource-juggler": "2.44.0",
     "nodemon": "1.3.7",
     "passport": "0.2.1",
+    "passport-ldapauth": "^0.5.0",
     "passport-facebook": "1.0.3",
     "passport-google-oauth": "0.1.5",
     "passport-local": "1.0.0",
@@ -89,7 +90,8 @@
     "serve-favicon": "2.2.0",
     "serve-static": "^1.10.0",
     "showdown": "0.3.1",
-    "time-grunt": "1.0.0"
+    "time-grunt": "1.0.0",
+    "jade": ""
   },
   "devDependencies": {
     "browserify": "8.1.3",
